--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Newproject_Home</title>
     <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
-<header>
+<!-- <header>
     <h1>Продажи Квартир и Жилых Помещений</h1>
     <div class="buttons">
  <button class="but1">Новостройки</button>
@@ -15,303 +16,149 @@
  <button class="but3">Жилая</button>
  <button class="but4">Новости</button>
 </div>
-      </header>
+      </header> -->
+      <header>
+        <div class="container header-container">
+            <div class="logo">
+                <a href="index.html">
+                    <!-- Replace with your logo image -->
+                    <img src="logo.png" alt="ArchiCorp Logo">
+                </a>
+            </div>
+            <nav>
+                <ul class="nav-links">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html">Apartments</a></li>
+                    <li><a href="#">Projects</a></li>
+                    <li><a href="#">Investments</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+            <!-- Mobile Menu Icon -->
+            <div class="menu-toggle" id="mobile-menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+        </div>
+    </header>
+    
       <hr>
       <main>
-        <div class="studio-item">
-            <img src="studio-photo.jpg" alt="Studio photo">
-            <div class="studio-info">
-              <h2>Студия 1 комната в Варшава, Польша</h2>
-              <p>Студия 1 комната</p>
-              <p>Варшава, Польша</p>
-              <ul>
-                <li>Число комнат: 1</li>
-                <li>Количество спален: 1</li>
-                <li>Кол-во ванных комнат: 1</li>
-                <li>Площадь: 29 м²</li>
-                <li>Этаж: 4/4</li>
-              </ul>
-              <p>Linde Résidence II - это уютное здание с 58 квартирами. На выбор предлагаются как комфортабельные...</p>
-              <p>Цена по запросу</p>
-            </div>
-            <button class="mybut">Оставить заявку</button>
-          </div>
-          <div class="studio-item">
-            <img src="studio-photo.jpg" alt="Studio photo">
-            <div class="studio-info">
-              <h2>Студия 1 комната в Варшава, Польша</h2>
-              <p>Студия 1 комната</p>
-              <p>Варшава, Польша</p>
-              <ul>
-                <li>Число комнат: 1</li>
-                <li>Количество спален: 1</li>
-                <li>Кол-во ванных комнат: 1</li>
-                <li>Площадь: 29 м²</li>
-                <li>Этаж: 4/4</li>
-              </ul>
-              <p>Linde Résidence II - это уютное здание с 58 квартирами. На выбор предлагаются как комфортабельные...</p>
-              <p>Цена по запросу</p>
-            </div>
-            <button class="mybut">Оставить заявку</button>
-          </div>
-          <div class="studio-item">
-            <img src="studio-photo.jpg" alt="Studio photo">
-            <div class="studio-info">
-              <h2>Студия 1 комната в Варшава, Польша</h2>
-              <p>Студия 1 комната</p>
-              <p>Варшава, Польша</p>
-              <ul>
-                <li>Число комнат: 1</li>
-                <li>Количество спален: 1</li>
-                <li>Кол-во ванных комнат: 1</li>
-                <li>Площадь: 29 м²</li>
-                <li>Этаж: 4/4</li>
-              </ul>
-              <p>Linde Résidence II - это уютное здание с 58 квартирами. На выбор предлагаются как комфортабельные...</p>
-              <p>Цена по запросу</p>
-            </div>
-            <button class="mybut">Оставить заявку</button>
-          </div>
-          <div class="studio-item">
-            <img src="studio-photo.jpg" alt="Studio photo">
-            <div class="studio-info">
-              <h2>Студия 1 комната в Варшава, Польша</h2>
-              <p>Студия 1 комната</p>
-              <p>Варшава, Польша</p>
-              <ul>
-                <li>Число комнат: 1</li>
-                <li>Количество спален: 1</li>
-                <li>Кол-во ванных комнат: 1</li>
-                <li>Площадь: 29 м²</li>
-                <li>Этаж: 4/4</li>
-              </ul>
-              <p>Linde Résidence II - это уютное здание с 58 квартирами. На выбор предлагаются как комфортабельные...</p>
-              <p>Цена по запросу</p>
-            </div>
-            <button class="mybut">Оставить заявку</button>
-          </div>
-          <div class="studio-item">
-            <img src="studio-photo.jpg" alt="Studio photo">
-            <div class="studio-info">
-              <h2>Студия 1 комната в Варшава, Польша</h2>
-              <p>Студия 1 комната</p>
-              <p>Варшава, Польша</p>
-              <ul>
-                <li>Число комнат: 1</li>
-                <li>Количество спален: 1</li>
-                <li>Кол-во ванных комнат: 1</li>
-                <li>Площадь: 29 м²</li>
-                <li>Этаж: 4/4</li>
-              </ul>
-              <p>Linde Résidence II - это уютное здание с 58 квартирами. На выбор предлагаются как комфортабельные...</p>
-              <p>Цена по запросу</p>
-            </div>
-            <button class="mybut">Оставить заявку</button>
-          </div>
-          <div class="studio-item">
-            <img src="studio-photo.jpg" alt="Studio photo">
-            <div class="studio-info">
-              <h2>Студия 1 комната в Варшава, Польша</h2>
-              <p>Студия 1 комната</p>
-              <p>Варшава, Польша</p>
-              <ul>
-                <li>Число комнат: 1</li>
-                <li>Количество спален: 1</li>
-                <li>Кол-во ванных комнат: 1</li>
-                <li>Площадь: 29 м²</li>
-                <li>Этаж: 4/4</li>
-              </ul>
-              <p>Linde Résidence II - это уютное здание с 58 квартирами. На выбор предлагаются как комфортабельные...</p>
-              <p>Цена по запросу</p>
-            </div>
-            <button class="mybut">Оставить заявку</button>
-          </div>
-      </main>
-      <hr>
-      <div>
-        <img src="img/okeask-ru.png" alt="">
+         
+      <div class="container main-container">
+          <!-- Filter Sidebar -->
+          <aside class="filter-sidebar">
+              <h2>Filter Apartments</h2>
+              <form id="filterForm">
+                  <!-- City Filter -->
+                  <div class="form-group">
+                      <label for="city">City</label>
+                      <select id="city" name="city">
+                          <!-- Options will be populated dynamically -->
+                      </select>
+                  </div>
+
+                  <!-- Area Filter -->
+                  <div class="form-group">
+                      <label for="area">Area (m²)</label>
+                      <select id="area" name="area">
+                          <!-- Options will be populated dynamically -->
+                      </select>
+                  </div>
+
+                  <!-- Number of Rooms Filter -->
+                  <div class="form-group">
+                      <label for="numberOfRooms">Number of Rooms</label>
+                      <select id="numberOfRooms" name="numberOfRooms">
+                          <!-- Options will be populated dynamically -->
+                      </select>
+                  </div>
+
+                  <!-- Floor Filter -->
+                  <div class="form-group">
+                      <label for="floor">Floor</label>
+                      <select id="floor" name="floor">
+                          <!-- Options will be populated dynamically -->
+                      </select>
+                  </div>
+
+                  <!-- Total Floors Filter -->
+                  <div class="form-group">
+                      <label for="totalFloors">Total Floors</label>
+                      <select id="totalFloors" name="totalFloors">
+                          <!-- Options will be populated dynamically -->
+                      </select>
+                  </div>
+
+                  <!-- Has Balcony Filter -->
+                  <div class="form-group checkbox-group">
+                      <input type="checkbox" id="hasBalcony" name="hasBalcony">
+                      <label for="hasBalcony">Has Balcony</label>
+                  </div>
+
+                  <!-- Has Parking Filter -->
+                  <div class="form-group checkbox-group">
+                      <input type="checkbox" id="hasParking" name="hasParking">
+                      <label for="hasParking">Has Parking</label>
+                  </div>
+
+                  <!-- Submit Button -->
+                  <div class="form-actions">
+                      <button type="submit" class="btn-submit">Apply Filters</button>
+                      <button type="reset" class="btn-reset">Reset Filters</button>
+                  </div>
+              </form>
+          </aside>
+
+          <!-- Apartment Listings -->
+          <section class="apartment-listings">
+              <h2>Available Apartments</h2>
+              <div id="results" class="listings-container">
+                  <!-- Apartment cards will be displayed here -->
+              </div>
+          </section>
       </div>
-      <hr>
-      <main>
-        <div class="studio-item">
-            <img src="studio-photo.jpg" alt="Studio photo">
-            <div class="studio-info">
-              <h2>Студия 1 комната в Варшава, Польша</h2>
-              <p>Студия 1 комната</p>
-              <p>Варшава, Польша</p>
-              <ul>
-                <li>Число комнат: 1</li>
-                <li>Количество спален: 1</li>
-                <li>Кол-во ванных комнат: 1</li>
-                <li>Площадь: 29 м²</li>
-                <li>Этаж: 4/4</li>
-              </ul>
-              <p>Linde Résidence II - это уютное здание с 58 квартирами. На выбор предлагаются как комфортабельные...</p>
-              <p>Цена по запросу</p>
-            </div>
-            <button class="mybut">Оставить заявку</button>
-          </div>
-          <div class="studio-item">
-            <img src="studio-photo.jpg" alt="Studio photo">
-            <div class="studio-info">
-              <h2>Студия 1 комната в Варшава, Польша</h2>
-              <p>Студия 1 комната</p>
-              <p>Варшава, Польша</p>
-              <ul>
-                <li>Число комнат: 1</li>
-                <li>Количество спален: 1</li>
-                <li>Кол-во ванных комнат: 1</li>
-                <li>Площадь: 29 м²</li>
-                <li>Этаж: 4/4</li>
-              </ul>
-              <p>Linde Résidence II - это уютное здание с 58 квартирами. На выбор предлагаются как комфортабельные...</p>
-              <p>Цена по запросу</p>
-            </div>
-            <button class="mybut">Оставить заявку</button>
-          </div>
-          <div class="studio-item">
-            <img src="studio-photo.jpg" alt="Studio photo">
-            <div class="studio-info">
-              <h2>Студия 1 комната в Варшава, Польша</h2>
-              <p>Студия 1 комната</p>
-              <p>Варшава, Польша</p>
-              <ul>
-                <li>Число комнат: 1</li>
-                <li>Количество спален: 1</li>
-                <li>Кол-во ванных комнат: 1</li>
-                <li>Площадь: 29 м²</li>
-                <li>Этаж: 4/4</li>
-              </ul>
-              <p>Linde Résidence II - это уютное здание с 58 квартирами. На выбор предлагаются как комфортабельные...</p>
-              <p>Цена по запросу</p>
-            </div>
-            <button class="mybut">Оставить заявку</button>
-          </div>
-          <div class="studio-item">
-            <img src="studio-photo.jpg" alt="Studio photo">
-            <div class="studio-info">
-              <h2>Студия 1 комната в Варшава, Польша</h2>
-              <p>Студия 1 комната</p>
-              <p>Варшава, Польша</p>
-              <ul>
-                <li>Число комнат: 1</li>
-                <li>Количество спален: 1</li>
-                <li>Кол-во ванных комнат: 1</li>
-                <li>Площадь: 29 м²</li>
-                <li>Этаж: 4/4</li>
-              </ul>
-              <p>Linde Résidence II - это уютное здание с 58 квартирами. На выбор предлагаются как комфортабельные...</p>
-              <p>Цена по запросу</p>
-            </div>
-            <button class="mybut">Оставить заявку</button>
-          </div>
-          <div class="studio-item">
-            <img src="studio-photo.jpg" alt="Studio photo">
-            <div class="studio-info">
-              <h2>Студия 1 комната в Варшава, Польша</h2>
-              <p>Студия 1 комната</p>
-              <p>Варшава, Польша</p>
-              <ul>
-                <li>Число комнат: 1</li>
-                <li>Количество спален: 1</li>
-                <li>Кол-во ванных комнат: 1</li>
-                <li>Площадь: 29 м²</li>
-                <li>Этаж: 4/4</li>
-              </ul>
-              <p>Linde Résidence II - это уютное здание с 58 квартирами. На выбор предлагаются как комфортабельные...</p>
-              <p>Цена по запросу</p>
-            </div>
-            <button class="mybut">Оставить заявку</button>
-          </div>
-          <div class="studio-item">
-            <img src="studio-photo.jpg" alt="Studio photo">
-            <div class="studio-info">
-              <h2>Студия 1 комната в Варшава, Польша</h2>
-              <p>Студия 1 комната</p>
-              <p>Варшава, Польша</p>
-              <ul>
-                <li>Число комнат: 1</li>
-                <li>Количество спален: 1</li>
-                <li>Кол-во ванных комнат: 1</li>
-                <li>Площадь: 29 м²</li>
-                <li>Этаж: 4/4</li>
-              </ul>
-              <p>Linde Résidence II - это уютное здание с 58 квартирами. На выбор предлагаются как комфортабельные...</p>
-              <p>Цена по запросу</p>
-            </div>
-            <button class="mybut">Оставить заявку</button>
-          </div>
-          <div class="studio-item">
-            <img src="studio-photo.jpg" alt="Studio photo">
-            <div class="studio-info">
-              <h2>Студия 1 комната в Варшава, Польша</h2>
-              <p>Студия 1 комната</p>
-              <p>Варшава, Польша</p>
-              <ul>
-                <li>Число комнат: 1</li>
-                <li>Количество спален: 1</li>
-                <li>Кол-во ванных комнат: 1</li>
-                <li>Площадь: 29 м²</li>
-                <li>Этаж: 4/4</li>
-              </ul>
-              <p>Linde Résidence II - это уютное здание с 58 квартирами. На выбор предлагаются как комфортабельные...</p>
-              <p>Цена по запросу</p>
-            </div>
-            <button class="mybut">Оставить заявку</button>
-          </div>
-          <div class="studio-item">
-            <img src="studio-photo.jpg" alt="Studio photo">
-            <div class="studio-info">
-              <h2>Студия 1 комната в Варшава, Польша</h2>
-              <p>Студия 1 комната</p>
-              <p>Варшава, Польша</p>
-              <ul>
-                <li>Число комнат: 1</li>
-                <li>Количество спален: 1</li>
-                <li>Кол-во ванных комнат: 1</li>
-                <li>Площадь: 29 м²</li>
-                <li>Этаж: 4/4</li>
-              </ul>
-              <p>Linde Résidence II - это уютное здание с 58 квартирами. На выбор предлагаются как комфортабельные...</p>
-              <p>Цена по запросу</p>
-            </div>
-            <button class="mybut">Оставить заявку</button>
-          </div>
-           <div class="studio-item">
-            <img src="studio-photo.jpg" alt="Studio photo">
-            <div class="studio-info">
-              <h2>Студия 1 комната в Варшава, Польша</h2>
-              <p>Студия 1 комната</p>
-              <p>Варшава, Польша</p>
-              <ul>
-                <li>Число комнат: 1</li>
-                <li>Количество спален: 1</li>
-                <li>Кол-во ванных комнат: 1</li>
-                <li>Площадь: 29 м²</li>
-                <li>Этаж: 4/4</li>
-              </ul>
-              <p>Linde Résidence II - это уютное здание с 58 квартирами. На выбор предлагаются как комфортабельные...</p>
-              <p>Цена по запросу</p>
-            </div>
-            <button class="mybut">Оставить заявку</button>
-          </div>
-      </main>
-      <hr>
-      <div class="settings">
-        <h3>Параметры Недвижимости</h3>
-      </div>    
-      <div class="buttons2">
- <button class="but5">С садом</button>
- <button class="but6">С террасой</button>
- <button class="but7">Недорогая</button>
- <button class="but8">Элитная</button>
-</div>
+  </main>
 <hr>
-<div>
-  <p class="found">Ищите Программы Иммиграции</p>
-  <button class="go">Перейти</button>
-</div>
-<hr>
-<footer>В Footer пока что пусто</footer>
+<footer>
+    <div class="container footer-container">
+        <div class="footer-left">
+            <a href="index.html" class="footer-logo">
+                <img src="logo.png" alt="ArchiCorp Logo">
+            </a>
+            <p>&copy; 2023 ArchiCorp. All rights reserved.</p>
+        </div>
+        <div class="footer-right">
+            <ul class="footer-links">
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Terms of Service</a></li>
+                <li><a href="#">Sitemap</a></li>
+                <li><a href="#">Contact Us</a></li>
+            </ul>
+            <div class="social-media">
+                <!-- Social media icons -->
+                <a href="https://www.facebook.com/archicorp.cats" target="_blank">
+                    <img src="facebook-icon.png" alt="Facebook">
+                </a>
+                <a href="https://www.instagram.com/archicorp.cats" target="_blank">
+                    <img src="instagram-icon.png" alt="Instagram">
+                </a>
+                <a href="https://www.tiktok.com/@archicorp.cats" target="_blank">
+                    <img src="tiktok-icon.png" alt="TikTok">
+                </a>
+                <a href="https://www.youtube.com/@archicorp-cats" target="_blank">
+                    <img src="youtube-icon.png" alt="YouTube">
+                </a>
+            </div>
+        </div>
+    </div>
+</footer>
+
+
+
+<script src="js/my.js"></script>
+
 </body>
+
 </html>
