--- a/index.html
+++ b/index.html
@@ -8,30 +8,21 @@
 
 </head>
 <body>
-<!-- <header>
-    <h1>Продажи Квартир и Жилых Помещений</h1>
-    <div class="buttons">
- <button class="but1">Новостройки</button>
- <button class="but2">Аренда</button>
- <button class="but3">Жилая</button>
- <button class="but4">Новости</button>
-</div>
-      </header> -->
       <header>
         <div class="container header-container">
             <div class="logo">
                 <a href="index.html">
                     <!-- Replace with your logo image -->
-                    <img src="logo.png" alt="ArchiCorp Logo">
+                    <img src="img/archi.webp" alt="ArchiCorp Logo">
                 </a>
             </div>
             <nav>
                 <ul class="nav-links">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="index.html">Apartments</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Investments</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="index.html">Новостройки</a></li>
+                    <li><a href="index.html">Аренда</a></li>
+                    <li><a href="#">Жилая</a></li>
+                    <li><a href="#">Новости</a></li>
+                    <li><a href="#">Контакт</a></li>
                 </ul>
             </nav>
             <!-- Mobile Menu Icon -->
@@ -49,7 +40,7 @@
       <div class="container main-container">
           <!-- Filter Sidebar -->
           <aside class="filter-sidebar">
-              <h2>Filter Apartments</h2>
+              <h2>Поиск Квартир и жилых помещений </h2>
               <form id="filterForm">
                   <!-- City Filter -->
                   <div class="form-group">
@@ -125,7 +116,7 @@
     <div class="container footer-container">
         <div class="footer-left">
             <a href="index.html" class="footer-logo">
-                <img src="logo.png" alt="ArchiCorp Logo">
+                <img src="img/archi.webp" alt="ArchiCorp Logo">
             </a>
             <p>&copy; 2023 ArchiCorp. All rights reserved.</p>
         </div>
@@ -139,16 +130,16 @@
             <div class="social-media">
                 <!-- Social media icons -->
                 <a href="https://www.facebook.com/archicorp.cats" target="_blank">
-                    <img src="facebook-icon.png" alt="Facebook">
+                    <img src="img/frc.webp" alt="Facebook">
                 </a>
                 <a href="https://www.instagram.com/archicorp.cats" target="_blank">
-                    <img src="instagram-icon.png" alt="Instagram">
+                    <img src="img/inst.webp" alt="Instagram">
                 </a>
                 <a href="https://www.tiktok.com/@archicorp.cats" target="_blank">
-                    <img src="tiktok-icon.png" alt="TikTok">
+                    <img src="img/Logotip-Tik-tok.png" alt="TikTok">
                 </a>
                 <a href="https://www.youtube.com/@archicorp-cats" target="_blank">
-                    <img src="youtube-icon.png" alt="YouTube">
+                    <img src="img/youtube-1.png" alt="YouTube">
                 </a>
             </div>
         </div>
